correct prorder link

--- a/views/index-en.hbs
+++ b/views/index-en.hbs
@@ -9,7 +9,7 @@
 			<li class="active"><a href="/{{ lang }}">Home</a></li>
 			<li><a href="/{{ lang }}/moti">Moti</a></li>
 			<li><a href="/{{ lang }}/faq">FAQ</a></li>
-			<li><a href="/{{ lang }}/pre-order">Pre-order</a></li>
+			<li><a href="/{{ lang }}/preorder">Pre-order</a></li>
 			<li><a href="/{{ lang }}/contact">Contact</a></li>
 
 		</ul>
