--- a/views/index-fr.hbs
+++ b/views/index-fr.hbs
@@ -9,7 +9,7 @@
 			<li class="active"><a href="/{{ lang }}">Home</a></li>
 			<li><a href="/{{ lang }}/moti">Moti</a></li>
 			<li><a href="/{{ lang }}/faq">FAQ</a></li>
-			<li><a href="/{{ lang }}/pre-order">Précommande</a></li>
+			<li><a href="/{{ lang }}/preorder">Précommande</a></li>
 			<li><a href="/{{ lang }}/contact">Contact</a></li>
 
 		</ul>
