--- a/views/layouts/landing.hbs
+++ b/views/layouts/landing.hbs
@@ -25,12 +25,15 @@
 
 	<body>
 
+		<div id="landing-background"></div>
+
 		<div class="site-wrapper">
 
 			<div class="site-wrapper-inner">
 
 				<div class="cover-container">
 
+					{{> navbar }}
 
 					{{{ body }}}
 
