--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6405,16 +6405,24 @@ body {
   color: #fff;
 }
 
+#landing-background {
+  position: fixed;
+  z-index: -100;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  background-image: url("/img/still-1.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .site-wrapper {
   display: table;
   width: 100%;
   height: 100%;
   min-height: 100%;
   text-align: center;
-  background-image: url("/img/still-1.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .site-wrapper-inner {
