--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6371,8 +6371,10 @@ VIDEO.CSS
 
 #video-container {
   position: fixed;
+  top: 0;
   width: 100%;
   height: 100%;
+  min-height: 100%;
   background-image: url("/img/still-1.png");
   background-size: cover;
   background-repeat: no-repeat;
