organize partials in site and pages

--- a/views/layouts/landing.hbs
+++ b/views/layouts/landing.hbs
@@ -1,31 +1,9 @@
-<!DOCTYPE html>
-<html lang="{{ lang }}">
 
-	<head>
-
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<title>{{title}} &#149; {{site._title}}</title>
-
-		<meta name="author" content="{{ site._authors }}">
-		<meta name="apple-mobile-web-app-title" content="Discover Moti">
-		<meta name="robots" content="index, follow">
-
-		<meta name="description" content="{{ description }}">
-		<meta name="keywords" content="{{ keywords }}">
-
-		{{> html5shim }}
-
-		{{> modernizr-js }}
-
-		{{> css }}
-
-	</head>
+{{> site/head }}
 
 	<body>
 
-		<div id="landing-background"></div>
+		<!-- <div id="landing&#45;background"></div> -->
 
 		<div class="site-wrapper">
 
@@ -33,11 +11,11 @@
 
 				<div class="cover-container">
 
-					{{> navbar }}
+					{{> pages/navbar }}
 
 					{{{ body }}}
 
-					{{> footer }}
+					{{> site/footer }}
 
 				</div>
 
@@ -62,9 +40,9 @@
 		</div> <!-- vid -->
 
 		<!-- jQuery -->
-		{{> analytics }}
-		{{> jquery-js }}
-		{{> vid-js }}
+		{{> site/analytics }}
+		{{> site/jquery-js }}
+		{{> pages/vid-js }}
 
 	</body>
 
