--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,27 +1,5 @@
-<!DOCTYPE html>
-<html lang="{{ lang }}">
 
-	<head>
-
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<title>{{title}} &#149; {{site._title}}</title>
-
-		<meta name="author" content="{{ site._authors }}">
-		<meta name="apple-mobile-web-app-title" content="Discover Moti">
-		<meta name="robots" content="index, follow">
-
-		<meta name="description" content="{{ description }}">
-		<meta name="keywords" content="{{ keywords }}">
-
-		{{> html5shim }}
-
-		{{> modernizr-js }}
-
-		{{> css }}
-
-	</head>
+{{> site/head }}
 
 	<body>
 
@@ -42,22 +20,7 @@
 			</div>
 
 		</div>
-
-		<div class="vid">
-
-			<div class="vid-fade"></div>
-
-			<div id="video-container">
-
-				<video id="splash" class="vid-bg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
-					<source src="{{ site._vid-moti }}" type="video/mp4"></source>
-					Your browser does not support the video tag. We suggest you upgrade your browser to <a href="https://www.google.com/intl/en/chrome/browser/">Google Chrome</a>.
-
-				</video> <!-- splash -->
-
-			</div> <!-- video-container -->
-
-		</div> <!-- vid -->
+	</div> <!-- vid -->
 
 		<!-- jQuery -->
 		{{> analytics }}
