changed partials links

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,11 +9,11 @@
 
 				<div class="cover-container">
 
-					{{> navbar }}
+					{{> pages/navbar }}
 
 					{{{ body }}}
 
-					{{> footer }}
+					{{> site/footer }}
 
 				</div>
 
@@ -23,9 +23,9 @@
 	</div> <!-- vid -->
 
 		<!-- jQuery -->
-		{{> analytics }}
-		{{> jquery-js }}
-		{{> vid-js }}
+		{{> site/analytics }}
+		{{> site/jquery-js }}
+		{{> pages/vid-js }}
 
 	</body>
 
