--- a/views/pages/index-fr.hbs
+++ b/views/pages/index-fr.hbs
@@ -1,54 +1,46 @@
-<div class="masthead clearfix">
 
-	<div class="inner">
+<div class="site-wrapper">
 
-		<h3 class="masthead-brand"><a href="http://weareleka.com"><img src="{{ site._img }}/logo-leka.svg" alt="Leka Logo" class="logo-nav"></a></h3>
+	<div class="site-wrapper-inner">
 
-		<ul class="nav masthead-nav">
+		<div class="cover-container">
 
-			<li id="home" class="active"><a href="/{{ lang }}">Home</a></li>
-			<li><a href="/{{ lang }}/moti">Moti</a></li>
-			<li><a href="/{{ lang }}/faq">FAQ</a></li>
-			<li><a href="/{{ lang }}/preorder">Précommande</a></li>
-			<li><a href="/{{ lang }}/contact">Contact</a></li>
+			<div class="masthead">
 
-		</ul>
+				<div class="header">
 
-	</div>
+					<h3 class="masthead-brand"><a href="http://weareleka.com"><img src="{{ site._img }}/logo-leka.svg" alt="Leka Logo" class="logo-nav"></a></h3>
 
-</div>
+					<ul class="nav masthead-nav">
 
-<div class="inner cover">
+						<li id="home" class="active"><a href="/{{ lang }}">Home</a></li>
+						<li><a href="/{{ lang }}/moti">Moti</a></li>
+						<li><a href="/{{ lang }}/faq">FAQ</a></li>
+						<li><a href="/{{ lang }}/preorder">Précommander</a></li>
+						<li><a href="/{{ lang }}/contact">Contact</a></li>
 
-	<img src="{{ site._img }}/logo-moti.svg" alt="Moti Logo" class="logo-front">
+					</ul>
 
-	<h1 class="cover-heading">Dites bonjour à Moti</h1>
-	<p class="lead">une nouvelle manière d'apprendre, un nouvel ami</p>
-	<p class="lead">
-		<a href="/{{ lang }}/moti"><button class="btn btn--primary">Découvrez Moti</button></a>
-		<a href="/{{ lang }}/preorder"><button class="btn btn--secondary">Précommandez</button></a>
-	</p>
-</div>
+				</div>
 
-<div class="mastfoot">
-	<div class="inner">
-		<p><a href="/en" title="English version">en</a> / <a href="/fr" title="Version française">fr</a></p>
-		<p>Made with <i class="fa fa-heart"></i> by <a href="http://weareleka.com" target="_blank">Leka</a> | &copy; 2014</p>
-		<div class="mastfoot-links">
+			</div>
 
-			<a title="Ecrivez-nous!" href="mailto:hello@weareleka.com?subject=I%20Love%20Leka&amp;body=You%20are%20awesome,%20keep%20up%20the%20good%20work!"><i class="fa fa-envelope-o"></i></a>
+			<div class="cover">
 
-			<a title="Follow us on Facebook" href="https://www.facebook.com/WeAreLeka"><i class="fa fa-facebook-square"></i></a>
+				<img src="{{ site._img }}/logo-moti.svg" alt="Moti Logo" class="logo-front">
 
-			<a title="Follow us on Twitter" href="https://twitter.com/WeAreLeka"><i class="fa fa-twitter"></i></a>
-
-			<a title="Follow us on Github" href="https://github.com/WeAreLeka"><i class="fa fa-github"></i></a>
-
-			<a title="Follow our blog" href="http://blog.weareleka.com"><i class="fa fa-rss"></i></a>
-
-			<a title="Follow us on Vimeo" href="http://www.youtube.com/user/LekaSmartToy"><i class="fa fa-vimeo-square"></i></a>
+				<h1 class="cover-heading">Voici Moti</h1>
+				<p class="lead">une nouvelle manière de jouer, d'apprendre et un nouvel ami</p>
+				<p class="lead">
+					<a href="/{{ lang }}/moti"><button class="btn btn--primary">Découvrez Moti</button></a>
+					<a href="/{{ lang }}/preorder"><button class="btn btn--secondary">Précommandez</button></a>
+				</p>
+			</div>
 
 		</div>
+
 	</div>
+
 </div>
+
 
