--- a/css/ui/_landing.scss
+++ b/css/ui/_landing.scss
@@ -2,15 +2,6 @@
 LANDING-PAGE.CSS
 \*------------------------------------*/
 
-html {
-	height: 100%;
-}
-
-body {
-	height: 100%;
-	color: #fff;
-}
-
 #landing-background {
 	position: fixed;
 	z-index: -100;
@@ -29,28 +20,42 @@ body {
 	height: 100%;
 	min-height: 100%;
 	text-align: center;
-}
 
-.site-wrapper-inner {
-	display: table-cell;
-	vertical-align: top;
-}
+	.site-wrapper-inner {
+		display: table-cell;
+	}
 
-.cover-container {
-	margin-right: auto;
-	margin-left: auto;
-}
+	.cover-container {
+		margin-right: auto;
+		margin-left: auto;
+	}
 
-.inner {
-	padding: 30px;
+	.header {
+		padding: 30px;
+		color: #fff;
+	}
 }
 
 .masthead-brand {
 	margin-top: 10px;
 	margin-bottom: 10px;
+
+	.logo-nav {
+		position: relative;
+		height: 40px;
+		width: auto;
+	}
+
+	@media (min-width: 768px) {
+		float: left;
+	}
 }
 
-.masthead-nav > {
+.masthead-nav {
+	@media (min-width: 768px) {
+		float: right;
+	}
+
 	li {
 		display: inline-block;
 		+ li {
@@ -70,6 +75,7 @@ body {
 			}
 		}
 	}
+
 	.active > a {
 		color: #fff;
 		border-bottom-color: #fff;
@@ -80,21 +86,12 @@ body {
 	}
 }
 
-@media (min-width: 768px) {
-	.masthead-brand {
-		float: left;
-	}
-	.masthead-nav {
-		float: right;
-	}
-}
-
 .cover {
-	padding: 0 20px;
+	color: #fff;
+	vertical-align: middle;
 
 	.logo-front {
-		display: block;
-		margin: 0 auto;
+		display: inline;
 		width: 250px;
 	}
 
@@ -121,19 +118,14 @@ body {
 			background-color: lighten($blue, 10%);
 		}
 	}
-}
 
-.mastfoot {
-	color: rgba(255, 255, 255, 0.75);
-	font-weight: 300;
-	word-spacing: 1px;
-
-	.mastfoot-links {
-		i {
-			margin: 0 10px 0 10px;
-		}
+	@media (min-width: 768px) {
+		margin-top: 100px;
 	}
 
+	@media (min-width: 992px) {
+		margin-top: 150px;
+	}
 }
 
 @media (min-width: 992px) {
@@ -142,29 +134,15 @@ body {
 		position: fixed;
 		top: 0;
 	}
-	.mastfoot {
-		position: fixed;
-		bottom: 0;
-	}
 	/* Start the vertical centering */
 	.site-wrapper-inner {
 		vertical-align: middle;
 	}
-	/* Handle the widths */
-	.masthead, .mastfoot, .cover-container {
-		width: 100%;
-	}
 }
 
 @media (min-width: 992px) {
-	.masthead, .mastfoot, .cover-container {
+	.masthead, .cover-container {
 		width: 700px;
 	}
-}
-
-.logo-nav {
-	position: relative;
-	height: 40px;
-	width: auto;
 }
 
