create footer and navbar partial + vid partial

--- a/views/partials/site/footer.handlebars
+++ b/views/partials/site/footer.handlebars
@@ -1,8 +1,12 @@
-<div class="mastfoot">
-	<div class="inner">
+<div id="footer">
+
+	<div class="container">
+
 		<p><a href="/en" title="English version">en</a> / <a href="/fr" title="Version française">fr</a></p>
+
 		<p>Made with <i class="fa fa-heart"></i> by <a href="http://weareleka.com" target="_blank">Leka</a> | &copy; 2014</p>
-		<div class="mastfoot-links">
+
+		<div class="footer-links">
 
 			<a title="Ecrivez-nous!" href="mailto:hello@weareleka.com?subject=I%20Love%20Leka&amp;body=You%20are%20awesome,%20keep%20up%20the%20good%20work!"><i class="fa fa-envelope-o"></i></a>
 
@@ -17,6 +21,8 @@
 			<a title="Follow us on Vimeo" href="http://www.youtube.com/user/LekaSmartToy"><i class="fa fa-vimeo-square"></i></a>
 
 		</div>
+
 	</div>
+
 </div>
 
