--- a/views/partials/site/footer.handlebars
+++ b/views/partials/site/footer.handlebars
@@ -2,7 +2,7 @@
 
 	<div class="container">
 
-		<p><a href="/en" title="English version">en</a> / <a href="/fr" title="Version française">fr</a></p>
+		<p><a href="/en/{{ link }}" title="English version">en</a> / <a href="/fr/{{ link }}" title="Version française">fr</a></p>
 
 		<p>Made with <i class="fa fa-heart"></i> by <a href="http://weareleka.com" target="_blank">Leka</a> | &copy; 2014</p>
 
