--- a/views/partials/site/jquery-js.handlebars
+++ b/views/partials/site/jquery-js.handlebars
@@ -2,3 +2,4 @@
 <script src="https://code.jquery.com/jquery-2.1.0.min.js"></script>
 <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
 <script src="{{ site._js }}/jquery.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
