--- a/views/partials/site/navbar.handlebars
+++ b/views/partials/site/navbar.handlebars
@@ -1,35 +1,48 @@
-<!-- Static navbar -->
-<div class="navbar navbar-default" role="navigation">
+<header>
+	<div class="container">
+		<div class="navbar navbar-default" role="navigation">
 
-	<div class="container-fluid">
+			<div class="container-fluid">
 
-		<div class="navbar-header">
+				<div class="navbar-header">
 
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
 
-			</button>
+					</button>
 
-			<a class="navbar-brand" href="#">Moti</a>
+					<a class="navbar-brand" href="/{{ lang }}"><img src="{{ site._img }}/logo-moti.svg" alt="Leka Logo" class="logo-navbar">Moti</a>
+
+				</div>
+
+				<div class="navbar-collapse collapse">
+
+					<ul class="nav navbar-nav navbar-right">
+
+						{{#if en}}
+						{{#each nav.en}}
+						<li><a href="/{{ ../../lang }}/{{ this.link }}">{{ this.name }}</a></li>
+						{{/each}}
+						{{/if}}
+
+						{{#if fr}}
+						{{#each nav.fr}}
+						<li><a href="/{{ ../../lang }}/{{ this.link }}">{{ this.name }}</a></li>
+						{{/each}}
+						{{/if}}
+
+					</ul>
+
+				</div><!--/.nav-collapse -->
+
+			</div><!--/.container-fluid -->
 
 		</div>
 
-		<div class="navbar-collapse collapse">
 
-			<ul class="nav navbar-nav navbar-right">
-
-				<li class="active"><a href="./">Default</a></li>
-				<li><a href="../navbar-static-top/">Static top</a></li>
-				<li><a href="../navbar-fixed-top/">Fixed top</a></li>
-
-			</ul>
-
-		</div><!--/.nav-collapse -->
-
-	</div><!--/.container-fluid -->
-
-</div>
+	</div>
+</header>
