add leka logo in navbar and position it right

--- a/views/partials/site/navbar.handlebars
+++ b/views/partials/site/navbar.handlebars
@@ -15,8 +15,13 @@
 
 					</button>
 
-					<a class="navbar-brand" href="/{{ lang }}"><img src="{{ site._img }}/logo-moti.svg" alt="Leka Logo" class="logo-navbar">Moti</a>
 
+					<h3 class="masthead-brand"><a href="http://weareleka.com"><img src="{{ site._img }}/logo-leka.svg" alt="Leka Logo" class="logo-nav"></a></h3>
+					<!-- <img src="{{ site._img }}/logo&#45;moti.svg" alt="Leka Logo" class="logo&#45;navbar"> -->
+					<!-- <div class="logo&#45;container"> -->
+					<!-- 	<a class="" href="/{{ lang }}"><img src="{{ site._img }}/logo&#45;moti.svg" alt="Leka Logo" class="logo&#45;navbar"></a> -->
+					<!-- </div> -->
+                    <!--  -->
 				</div>
 
 				<div class="navbar-collapse collapse">
