--- a/views/partials/site/navbar.handlebars
+++ b/views/partials/site/navbar.handlebars
@@ -15,13 +15,8 @@
 
 					</button>
 
-
 					<h3 class="masthead-brand"><a href="http://weareleka.com"><img src="{{ site._img }}/logo-leka.svg" alt="Leka Logo" class="logo-nav"></a></h3>
-					<!-- <img src="{{ site._img }}/logo&#45;moti.svg" alt="Leka Logo" class="logo&#45;navbar"> -->
-					<!-- <div class="logo&#45;container"> -->
-					<!-- 	<a class="" href="/{{ lang }}"><img src="{{ site._img }}/logo&#45;moti.svg" alt="Leka Logo" class="logo&#45;navbar"></a> -->
-					<!-- </div> -->
-                    <!--  -->
+
 				</div>
 
 				<div class="navbar-collapse collapse">
@@ -45,9 +40,16 @@
 				</div><!--/.nav-collapse -->
 
 			</div><!--/.container-fluid -->
-
 		</div>
 
-
 	</div>
+
+	<div class="punchline-container center-block">
+		<div class="punchline-content">
+			somme text
+			<h1 class="punchline">Dive deep into Moti</h1>
+		</div>
+	</div>
+
+
 </header>
