remove everything and start from scratch

--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -1,17 +1,17 @@
 
-{{> site/head }}
+{{> utilities/head }}
 
 <body>
 
 	{{{ body }}}
 
-	{{> pages/vid-html }}
-	{{> site/footer }}
+	{{> sections/vid-html }}
+	{{> utilities/footer }}
 
 	<!-- jQuery -->
-	{{> site/analytics }}
-	{{> site/jquery-js }}
-	{{> pages/vid-js }}
+	{{> utilities/analytics }}
+	{{> utilities/jquery-js }}
+	{{> sections/vid-js }}
 
 </body>
 
