--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,10 @@
 
-{{> site/head }}
+{{> utilities/head }}
 
 <body>
 
 
-	{{> site/navbar }}
+	{{> utilities/navbar }}
 
 	<div class="container">
 
@@ -12,11 +12,11 @@
 
 	</div>
 
-	{{> site/footer }}
+	{{> utilities/footer }}
 
 	<!-- jQuery -->
-	{{> site/analytics }}
-	{{> site/jquery-js }}
+	{{> utilities/analytics }}
+	{{> utilities/jquery-js }}
 
 </body>
 
