--- a/views/partials/utilities/head.handlebars
+++ b/views/partials/utilities/head.handlebars
@@ -15,11 +15,11 @@
 		<meta name="description" content="{{ description }}">
 		<meta name="keywords" content="{{ keywords }}">
 
-		{{> site/html5shim }}
+		{{> utilities/html5shim }}
 
-		{{> site/modernizr-js }}
+		{{> utilities/modernizr-js }}
 
-		{{> site/css }}
+		{{> utilities/css }}
 
 	</head>
 
