--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -17,7 +17,7 @@
  * Place any variables that should override inuit.css’ defaults here.
  */
 
-$font-family-base: 'Ubuntu', sans-serif;
+$font-family-base: 'Lato', sans-serif;
 
 
 
