--- a/css/bootstrap.scss
+++ b/css/bootstrap.scss
@@ -11,14 +11,14 @@
 @import "bootstrap/type";
 @import "bootstrap/code";
 @import "bootstrap/grid";
-@import "bootstrap/tables";
+// @import "bootstrap/tables";
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
 
 // Components
 @import "bootstrap/component-animations";
 @import "bootstrap/glyphicons";
-@import "bootstrap/dropdowns";
+// @import "bootstrap/dropdowns";
 @import "bootstrap/button-groups";
 @import "bootstrap/input-groups";
 @import "bootstrap/navs";
@@ -31,7 +31,7 @@
 @import "bootstrap/jumbotron";
 @import "bootstrap/thumbnails";
 @import "bootstrap/alerts";
-@import "bootstrap/progress-bars";
+// @import "bootstrap/progress-bars";
 @import "bootstrap/media";
 @import "bootstrap/list-group";
 @import "bootstrap/panels";
@@ -42,7 +42,7 @@
 // @import "bootstrap/modals";
 // @import "bootstrap/tooltip";
 // @import "bootstrap/popovers";
-@import "bootstrap/carousel";
+// @import "bootstrap/carousel";
 
 // Utility classes
 @import "bootstrap/utilities";
