--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <body>
 
 
-	{{> utilities/navbar }}
+	{{> sections/navbar }}
 
 	<div class="container">
 
@@ -12,7 +12,7 @@
 
 	</div>
 
-	{{> utilities/footer }}
+	{{> sections/footer }}
 
 	<!-- jQuery -->
 	{{> utilities/analytics }}
