--- a/views/partials/utilities/css.handlebars
+++ b/views/partials/utilities/css.handlebars
@@ -4,7 +4,8 @@
 <link rel="apple-touch-icon" sizes="72x72" href="{{ site._img }}/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="{{ site._img }}/apple-touch-icon-114x114.png">
 
-<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic' rel='stylesheet' type='text/css'>
+
 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
 <link rel="stylesheet" href="{{ site._css }}/style.css">
