--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,14 +3,18 @@
 
 <body>
 
+	<!--
+	Navbar
+	Header
+	Moti + Features
+	How to use + customization
+	Deep dive
+	Faq
+	-->
 
 	{{> sections/navbar }}
 
-	<div class="container">
-
 		{{{ body }}}
-
-	</div>
 
 	{{> sections/footer }}
 
