--- a/css/ui/_landing.scss
+++ b/css/ui/_landing.scss
@@ -8,7 +8,7 @@ LANDING-PAGE.CSS
 	width: 100%;
 	height: 100%;
 	min-height: 100%;
-	background-image: url('/img/still-1.png');
+	/* background-image: url('/img/still-1.png'); */
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
