--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5398,7 +5398,7 @@ LANDING-PAGE.CSS
   width: 100%;
   height: 100%;
   min-height: 100%;
-  background-image: url("/img/still-1.png");
+  /* background-image: url('/img/still-1.png'); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -5548,36 +5548,8 @@ FOOTER.CSS
 /*------------------------------------*\
 NAVBAR.CSS
 \*------------------------------------*/
-.navbar {
-  height: 40px;
-  margin-bottom: 20px;
-  margin-top: 20px;
-  background-color: rgba(255, 255, 255, 0.6);
-  border-color: transparent;
-}
-.navbar .active {
-  background-color: #000;
-}
-
-header {
-  height: 700px;
-  background-image: url(/img/still-1.png);
-  background-position: cover;
-  background-repeat: no-repeat;
-}
-
-.punchline-container {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-.punchline-container .punchline-content {
-  display: inline-block;
-  text-align: center;
-}
-
 /*------------------------------------*\
-CAROUSEL.CSS
+MOTI.CSS
 \*------------------------------------*/
 /*------------------------------------*\
 COLORS.CSS
@@ -5592,4 +5564,5 @@ COLORS.CSS
 \*------------------------------------*/
 body {
   margin-bottom: 100px;
+  background-color: #DDD;
 }
