--- a/views/pages/index.hbs
+++ b/views/pages/index.hbs
@@ -1,13 +1,22 @@
-			<div class="cover">
+<section id="moti">
 
-				<img src="{{ site._img }}/logo-moti.svg" alt="Moti Logo" class="logo-front">
+	<div class="jumbotron">
 
-				<h1 class="cover-heading">Say hello to Moti</h1>
-				<p class="lead">and discover a new way to learn, play and progress</p>
-				<p class="lead">
-					<a href="/{{ lang }}/moti"><button class="btn btn--primary">Discover Moti</button></a>
-					<a href="/{{ lang }}/preorder"><button class="btn btn--secondary">Pre-order</button></a>
-				</p>
-			</div>
+		<h1>Say hello to Moti</h1>
 
+		<p>and discover a new way to learn, play & progress</p>
+		<!-- <div class="cover"> -->
+        <!--  -->
+		<!-- 	<img src="{{ site._img }}/logo&#45;moti.svg" alt="Moti Logo" class="logo&#45;front"> -->
+        <!--  -->
+		<!-- 	<h1 class="cover&#45;heading">Say hello to Moti</h1> -->
+		<!-- 	<p class="lead">and discover a new way to learn, play and progress</p> -->
+		<!-- 	<p class="lead"> -->
+		<!-- 		<a href="/{{ lang }}/moti"><button class="btn btn&#45;&#45;primary">Discover Moti</button></a> -->
+		<!-- 		<a href="/{{ lang }}/preorder"><button class="btn btn&#45;&#45;secondary">Pre&#45;order</button></a> -->
+		<!-- 	</p> -->
+		<!-- </div> -->
+        <!--  -->
+	</div>
 
+</section>
