--- a/assets/css/_modules/_footer.scss
+++ b/assets/css/_modules/_footer.scss
@@ -26,118 +26,119 @@
 // }
 
 .footer-2 {
-  ///////////////////////////////////////////////////////////////////////////////////
-  $base-spacing: 1.5em !default;
-  $base-accent-color: #477DCA !default;
-  $medium-screen: em(640) !default;
-  $large-screen: em(860) !default;
-  
-  ul {
-    margin: 0;
-    padding: 0;
-    line-height: 1.5em;
-  }
+	///////////////////////////////////////////////////////////////////////////////////
+	$base-spacing: 1.5em !default;
+	$base-accent-color: #477DCA !default;
+	$medium-screen: em(640) !default;
+	$large-screen: em(860) !default;
 
-  li {
-    list-style: none;
-  }
+	ul {
+		margin: 0;
+		padding: 0;
+		line-height: 1.5em;
+	}
 
-  a {
-    text-decoration: none;
-  }
-  //////////////////////////////////////////////////////////////////////////////////
+	li {
+		list-style: none;
+	}
 
-  $footer-background: desaturate(darken($base-accent-color, 20%), 30%);
-  $footer-color: white;
-  $footer-link-color: transparentize($footer-color, 0.6);
-  $footer-disclaimer-color: transparentize($footer-color, 0.6);
+	a {
+		text-decoration: none;
+	}
+	//////////////////////////////////////////////////////////////////////////////////
 
-  background: $footer-background;
-  padding: $base-spacing;
-  width: 100%;
-  display: inline-block;
+	$footer-background: desaturate(darken($base-accent-color, 20%), 30%);
+	$footer-color: white;
+	$footer-link-color: transparentize($footer-color, 0.6);
+	$footer-disclaimer-color: transparentize($footer-color, 0.6);
 
-  .footer-logo {
-    margin-right: 1em;
-    margin-bottom: 1em;
+	background: $footer-background;
+	padding: $base-spacing;
+	width: 100%;
+	display: inline-block;
 
-    @include media($large-screen) {
-      float: left;
-      margin-bottom: 0;
-    }
-  }
+	.footer-logo {
+		margin-right: 1em;
+		margin-bottom: 1em;
 
-  .footer-logo img {
-    height: 1.6em;
-  } 
+		@include media($large-screen) {
+			float: left;
+			margin-bottom: 0;
+		}
+	}
 
-  ul {
-    margin-bottom: 1em;
-    
-    @include media($large-screen) {
-      float: left;
-      line-height: 1.8em;
-      margin-left: 1em;
-      margin-bottom: 0;
-    }
-  }
+	.footer-logo img {
+		height: 2.6em;
+	}
 
-  ul li {
-    font-weight: 800;
-    padding-right: 1em;
+	ul {
+		margin-bottom: 1em;
 
-    @include media($large-screen) {
-      display: inline;
-      text-align: left;
-    }
-  }
+		@include media($large-screen) {
+			float: left;
+			line-height: 1.8em;
+			margin-left: 1em;
+			margin-bottom: 0;
+			padding-top: 0.5em;
+		}
+	}
 
-  ul li a {
-    color: $footer-link-color;
+	ul li {
+		font-weight: 800;
+		padding-right: 1em;
 
-    &:hover {
-      color: transparentize($footer-color, 0);
-    }
-  }
+		@include media($large-screen) {
+			display: inline;
+			text-align: left;
+		}
+	}
 
-  .footer-secondary-links {
-    @include media($large-screen) {
-      float: right;
-    }
+	ul li a {
+		color: $footer-link-color;
 
-    li {
-      font-size: 0.8em;
-      font-weight: 400;
-    }
+		&:hover {
+			color: transparentize($footer-color, 0);
+		}
+	}
 
-    ul.footer-social {
-      margin-top: 1em;
+	.footer-secondary-links {
+		@include media($large-screen) {
+			float: right;
+		}
 
-      @include media($large-screen) {
-        float: right;
-        margin-top: 0;
-      }
+		li {
+			font-size: 0.8em;
+			font-weight: 400;
+		}
 
-      li {
-        font-size: 1em;
-        float: left;
-        line-height: 0;
-        padding-right: 0.7em;
+		ul.footer-social {
+			margin-top: 1em;
 
-        &:last-child {
-          padding-right: 0;
-        }
-      }
+			@include media($large-screen) {
+				float: right;
+				margin-top: 0;
+			}
 
-      img {
-        height: 1.6em;
-        opacity: 0.7;
-        padding: 1px;
+			li {
+				font-size: 1em;
+				float: left;
+				line-height: 0;
+				padding-right: 0.7em;
 
-        &:hover {
-          opacity: 1;
-        }
-      }
-    }
-  }
+				&:last-child {
+					padding-right: 0;
+				}
+			}
+
+			img {
+				height: 1.6em;
+				opacity: 0.7;
+				padding: 1px;
+
+				&:hover {
+					opacity: 1;
+				}
+			}
+		}
+	}
 }
