--- a/assets/css/_modules/_hero.scss
+++ b/assets/css/_modules/_hero.scss
@@ -10,7 +10,7 @@
 	$hero-background-bottom: #20392B;
 	$hero-color: $lblue;
 	$gradient-angle: 10deg;
-	$hero-image: 'https://www.dropbox.com/s/kspqpoyjveh0xgs/Moti.jpg?raw=1';
+	$hero-image: '/assets/img/moti/Moti-day.jpg';
 
 	@include background-image(url($hero-image));
 	background-position: top;
