--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -590,12 +590,15 @@ html {
   box-sizing: inherit; }
 
 header.navigation {
-  position: fixed;
-  background-color: black;
-  border-bottom: 1px solid black;
+  background-color: transparent;
+  border-bottom: 1px solid transparent;
   min-height: 90px;
   width: 100%;
-  z-index: 999; }
+  position: fixed;
+  z-index: 999;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease; }
   header.navigation a {
     text-decoration: none; }
   header.navigation .navigation-wrapper {
@@ -658,7 +661,7 @@ header.navigation {
         margin: 0;
         padding: 0; } }
   header.navigation ul li.nav-link {
-    background: black;
+    background: transparent;
     display: block;
     line-height: 90px;
     overflow: hidden;
@@ -685,44 +688,10 @@ header.navigation {
   header.navigation .active-nav-item a {
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     padding-bottom: 3px; }
-  header.navigation .navigation-tools {
-    background: #505050;
-    clear: both;
-    display: block;
-    height: 90px;
-    padding-left: 0.5em;
-    padding-right: 1em; }
-    @media screen and (min-width: 53.75em) {
-      header.navigation .navigation-tools {
-        background: transparent;
-        clear: none;
-        float: right; } }
-  header.navigation .sign-up {
-    background-color: #477DCA;
-    border-radius: 3px;
-    border: none;
-    color: white;
-    display: inline-block;
-    font-size: inherit;
-    font-weight: bold;
-    padding: 7px 18px;
-    text-decoration: none;
-    background-clip: padding-box;
-    display: inline;
-    float: right;
-    font-size: 0.8em;
-    margin-top: 1em;
-    padding: 0.75em 1em;
-    text-transform: uppercase; }
-    header.navigation .sign-up:hover:not(:disabled) {
-      background-color: #578ad4;
-      cursor: pointer; }
-    header.navigation .sign-up:active:not(:disabled), header.navigation .sign-up:focus:not(:disabled) {
-      background-color: #3c71bb;
-      cursor: pointer; }
-    header.navigation .sign-up:disabled {
-      opacity: 0.5;
-      cursor: not-allowed; }
+
+header.navigation-collapse {
+  padding: 0;
+  background-color: black; }
 
 .sliding-menu-button {
   background-color: #7b7b7b;
@@ -769,8 +738,8 @@ header.navigation {
     height: 1.3em; }
 
 .hero {
-  background-image: url("https://www.dropbox.com/s/kspqpoyjveh0xgs/Moti.jpg?raw=1");
-  background-image: url("https://www.dropbox.com/s/kspqpoyjveh0xgs/Moti.jpg?raw=1");
+  background-image: url("/assets/img/moti/Moti-day.jpg");
+  background-image: url("/assets/img/moti/Moti-day.jpg");
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
