navigation now Ok - fixed plugins import order with neat&co - cleanup footer

--- a/assets/css/_modules/_hero.scss
+++ b/assets/css/_modules/_hero.scss
@@ -8,7 +8,7 @@
 
 	$hero-background-top: #7F99BE;
 	$hero-background-bottom: #20392B;
-	$hero-color: $lblue;
+	$hero-color: white;
 	$gradient-angle: 10deg;
 	$hero-image: '/assets/img/moti/Moti-day.jpg';
 
