--- a/assets/css/_modules/_navigation.scss
+++ b/assets/css/_modules/_navigation.scss
@@ -1,39 +1,40 @@
-header.navigation {
-	$base-border-color: gainsboro !default;
-	$base-border-radius: 3px !default;
-	$base-accent-color: #477DCA !default;
-	$dark-gray: #333 !default;
-	$large-screen: em(860) !default;
+// Variables
+$base-border-color: gainsboro !default;
+$base-border-radius: 3px !default;
+$base-accent-color: #477DCA !default;
+$dark-gray: #333 !default;
+$large-screen: em(860) !default;
 
-	a {
-		text-decoration: none;
-	}
+$navigation-padding: 1em;
+$navigation-background: $dark-gray;
+$navigation-color: transparentize(white, 0.3);
+$navigation-color-hover: white;
+$navigation-height: 60px;
+$navigation-nav-button-background: $base-accent-color;
+$navigation-nav-button-background-hover: lighten($navigation-background, 10%);
+$navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20%);
+$navigation-search-background: lighten($navigation-background, 5);
+$navigation-search-border: 1px solid darken($navigation-background, 5);
+$navigation-active-link-color: transparentize(white, 0.5);
+$navigation-submenu-padding: 1em;
+$navigation-submenu-width: 12em;
+$horizontal-bar-mode: $medium-screen;
 
-	$navigation-padding: 1em;
-	$navigation-background: transparent;
-	$navigation-color: transparentize(white, 0.3);
-	$navigation-color-hover: white;
-	$navigation-height: 90px;
-	$navigation-nav-button-background: $base-accent-color;
-	$navigation-nav-button-background-hover: lighten($navigation-background, 10%);
-	$navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20%);
-	$navigation-search-background: lighten($navigation-background, 5);
-	$navigation-search-border: 1px solid darken($navigation-background, 5);
-	$navigation-active-link-color: transparentize(white, 0.5);
-	$navigation-submenu-padding: 1em;
-	$navigation-submenu-width: 12em;
-	$horizontal-bar-mode: $large-screen;
+.navigation {
 
-	background-color: $navigation-background;
-	border-bottom: 1px solid darken($navigation-background, 10);
-	min-height: $navigation-height;
+	background-color: transparent;
 	width: 100%;
+	padding: 40px;
 
 	position: fixed;
 	z-index: 999;
 
 	@include transition(all 0.5s ease);
 
+	@include media (max-width $horizontal-bar-mode) {
+		background-color: $navigation-background;
+		padding: 0;
+	}
 
 	.navigation-wrapper {
 		@include clearfix;
@@ -46,11 +47,9 @@ header.navigation {
 		float: left;
 		max-height: $navigation-height;
 		padding-left: $navigation-padding;
-		padding-right: 2em;
 
 		img {
 			max-height: $navigation-height;
-			padding: 0.8em 0;
 		}
 	}
 
@@ -63,7 +62,8 @@ header.navigation {
 		font-weight: 700;
 		line-height: $navigation-height;
 		margin: 0;
-		padding-right: 1em;
+		padding-top: 22px;
+		padding-right: 22px;
 		text-transform: uppercase;
 
 		@include media ($horizontal-bar-mode) {
@@ -149,8 +149,7 @@ header.navigation {
 	}
 }
 
-header.navigation-collapse {
-	padding: 0;
-	background-color: black;
+.navigation-collapse {
+	background-color: $navigation-background;
+	padding: 0px;
 }
-
