--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -357,6 +357,16 @@ td,
 th {
   padding: 0; }
 
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit; }
+
 /* Bitters 0.10.0
  * http://bitters.bourbon.io
  * Copyright 2013–2014 thoughtbot, inc.
@@ -579,72 +589,62 @@ input[type="submit"] {
   vertical-align: middle;
   white-space: nowrap; }
 
-html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box; }
-
-*, *:before, *:after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
-  box-sizing: inherit; }
-
-header.navigation {
+.navigation {
   background-color: transparent;
-  border-bottom: 1px solid transparent;
-  min-height: 90px;
   width: 100%;
+  padding: 40px;
   position: fixed;
   z-index: 999;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   transition: all 0.5s ease; }
-  header.navigation a {
-    text-decoration: none; }
-  header.navigation .navigation-wrapper {
+  @media screen and (max-width: 40em) {
+    .navigation {
+      background-color: #333;
+      padding: 0; } }
+  .navigation .navigation-wrapper {
     max-width: 68em;
     margin-left: auto;
     margin-right: auto;
     position: relative;
     z-index: 9999; }
-    header.navigation .navigation-wrapper::after {
+    .navigation .navigation-wrapper::after {
       clear: both;
       content: "";
       display: table; }
-    header.navigation .navigation-wrapper::after {
+    .navigation .navigation-wrapper::after {
       clear: both;
       content: "";
       display: table; }
-  header.navigation .logo {
+  .navigation .logo {
     float: left;
-    max-height: 90px;
-    padding-left: 1em;
-    padding-right: 2em; }
-    header.navigation .logo img {
-      max-height: 90px;
-      padding: 0.8em 0; }
-  header.navigation .navigation-menu-button {
+    max-height: 60px;
+    padding-left: 1em; }
+    .navigation .logo img {
+      max-height: 60px; }
+  .navigation .navigation-menu-button {
     color: rgba(255, 255, 255, 0.7);
     display: block;
     float: right;
     font-weight: 700;
-    line-height: 90px;
+    line-height: 60px;
     margin: 0;
-    padding-right: 1em;
+    padding-top: 22px;
+    padding-right: 22px;
     text-transform: uppercase; }
-    @media screen and (min-width: 53.75em) {
-      header.navigation .navigation-menu-button {
+    @media screen and (min-width: 40em) {
+      .navigation .navigation-menu-button {
         display: none; } }
-    header.navigation .navigation-menu-button:hover {
+    .navigation .navigation-menu-button:hover {
       color: white; }
-  header.navigation nav {
+  .navigation nav {
     float: none;
-    min-height: 90px;
+    min-height: 60px;
     z-index: 9999999; }
-    @media screen and (min-width: 53.75em) {
-      header.navigation nav {
+    @media screen and (min-width: 40em) {
+      .navigation nav {
         float: right; } }
-  header.navigation ul.navigation-menu {
+  .navigation ul.navigation-menu {
     -webkit-transform-style: preserve-3d;
     clear: both;
     display: none;
@@ -653,45 +653,45 @@ header.navigation {
     padding: 0;
     width: 100%;
     z-index: 9999; }
-    header.navigation ul.navigation-menu.show {
+    .navigation ul.navigation-menu.show {
       display: block; }
-    @media screen and (min-width: 53.75em) {
-      header.navigation ul.navigation-menu {
+    @media screen and (min-width: 40em) {
+      .navigation ul.navigation-menu {
         display: inline;
         margin: 0;
         padding: 0; } }
-  header.navigation ul li.nav-link {
-    background: transparent;
+  .navigation ul li.nav-link {
+    background: #333;
     display: block;
-    line-height: 90px;
+    line-height: 60px;
     overflow: hidden;
     padding-right: 0.8em;
     text-align: right;
     width: 100%;
     z-index: 9999; }
-    @media screen and (min-width: 53.75em) {
-      header.navigation ul li.nav-link {
+    @media screen and (min-width: 40em) {
+      .navigation ul li.nav-link {
         background: transparent;
         display: inline;
-        line-height: 90px;
+        line-height: 60px;
         text-decoration: none;
         width: auto; } }
-    header.navigation ul li.nav-link a {
+    .navigation ul li.nav-link a {
       color: rgba(255, 255, 255, 0.7);
       display: inline-block;
       font-weight: 400; }
-      @media screen and (min-width: 53.75em) {
-        header.navigation ul li.nav-link a {
+      @media screen and (min-width: 40em) {
+        .navigation ul li.nav-link a {
           padding-right: 1em; } }
-      header.navigation ul li.nav-link a:hover {
+      .navigation ul li.nav-link a:hover {
         color: white; }
-  header.navigation .active-nav-item a {
+  .navigation .active-nav-item a {
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     padding-bottom: 3px; }
 
-header.navigation-collapse {
-  padding: 0;
-  background-color: black; }
+.navigation-collapse {
+  background-color: #333;
+  padding: 0px; }
 
 .sliding-menu-button {
   background-color: #7b7b7b;
@@ -769,7 +769,7 @@ header.navigation-collapse {
     max-width: 68em;
     margin-left: auto;
     margin-right: auto;
-    color: #66bddf;
+    color: white;
     margin: auto;
     padding: 3.5em;
     text-align: center; }
