--- a/css/_modules/_footer.scss
+++ b/css/_modules/_footer.scss
@@ -4,11 +4,28 @@
 	$medium-screen: em(640) !default;
 	$large-screen: em(860) !default;
 
-	ul {
-		margin: 0;
-		padding: 0;
-		line-height: 1.5em;
-	}
+	@include vertical-horizontal-centering();
+
+	$footer-image: '/img/moti/Moti-day.jpg';
+
+	@include background-image(url($footer-image));
+	background-position: top;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+
+	$footer-background: desaturate(darken($base-accent-color, 20%), 30%);
+	$footer-color: black;
+	$footer-link-color: transparentize($footer-color, 0.6);
+	$footer-disclaimer-color: transparentize($footer-color, 0.6);
+
+	// background: $footer-background;
+	padding: $base-spacing;
+	width: 100%;
+
+	color: $footer-link-color;
+
+	text-align: center;
 
 	li {
 		list-style: none;
@@ -16,61 +33,6 @@
 
 	a {
 		text-decoration: none;
-	}
-
-	$footer-background: desaturate(darken($base-accent-color, 20%), 30%);
-	$footer-color: white;
-	$footer-link-color: transparentize($footer-color, 0.6);
-	$footer-disclaimer-color: transparentize($footer-color, 0.6);
-
-	background: $footer-background;
-	padding: $base-spacing;
-	width: 100%;
-	display: inline-block;
-
-	color: $footer-link-color;
-
-	.footer-love-letters {
-		@include vertical-horizontal-centering();
-	}
-
-	.footer-logo {
-		margin-right: 1em;
-		margin-bottom: 1em;
-
-		@include media($large-screen) {
-			float: left;
-			margin-bottom: 0;
-		}
-	}
-
-	.footer-logo img {
-		height: 2.6em;
-	}
-
-	ul {
-		margin-bottom: 1em;
-
-		@include media($large-screen) {
-			float: left;
-			line-height: 1.8em;
-			margin-left: 1em;
-			margin-bottom: 0;
-			padding-top: 0.5em;
-		}
-	}
-
-	ul li {
-		font-weight: 800;
-		padding-right: 1em;
-
-		@include media($large-screen) {
-			display: inline;
-			text-align: left;
-		}
-	}
-
-	ul li a {
 		color: $footer-link-color;
 
 		&:hover {
@@ -78,44 +40,15 @@
 		}
 	}
 
-	.footer-secondary-links {
+	ul {
+		// margin-bottom: 1em;
+
 		@include media($large-screen) {
-			float: right;
-		}
-
-		li {
-			font-size: 0.8em;
-			font-weight: 400;
-		}
-
-		ul.footer-social {
-			margin-top: 1em;
-
-			@include media($large-screen) {
-				float: right;
-				margin-top: 0;
-			}
-
-			li {
-				font-size: 1em;
-				float: left;
-				line-height: 0;
-				padding-right: 0.7em;
-
-				&:last-child {
-					padding-right: 0;
-				}
-			}
-
-			img {
-				height: 1.6em;
-				opacity: 0.7;
-				padding: 1px;
-
-				&:hover {
-					opacity: 1;
-				}
-			}
+			float: left;
+			line-height: 1.8em;
+			// margin-left: 1em;
+			// margin-bottom: 0;
+			// padding-top: 0.5em;
 		}
 	}
 }
