--- a/css/_modules/_hero.scss
+++ b/css/_modules/_hero.scss
@@ -1,4 +1,3 @@
-
 .hero {
 	$base-border-radius: 3px !default;
 	$base-accent-color: #477DCA !default;
@@ -7,21 +6,20 @@
 	$hero-background-top: #7F99BE;
 	$hero-background-bottom: #20392B;
 	$hero-color: white;
-	$gradient-angle: 10deg;
 	$hero-image: '/img/moti/Moti-day.jpg';
 
-	@include background-image(url($hero-image));
+	background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), (url($hero-image));
 	background-position: top;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
 
+	@include nice-shadow();
 	@include vertical-horizontal-centering();
-	padding-bottom: 3em;
 	height: 100%;
 
 	.hero-logo img {
-		height: 8em;
+		height: 10em;
 		margin-bottom: 1em;
 	}
 
@@ -29,37 +27,59 @@
 		@include outer-container;
 		@include clearfix;
 		color: $hero-color;
-		margin: auto;
-		padding: 3.5em;
 		text-align: center;
+		z-index:10;
+		background: rgba(52, 27, 43, 0.5);
+		border-radius: 20px;
+
+		padding: 90px 40px 90px 40px;
+		margin: 10px;
+
+		@include media (max-width $horizontal-bar-mode) {
+			padding: 40px inherit;
+		}
 
 		.hero-copy {
 			text-align: center;
 
 			h1 {
-				font-size: 1.6em;
-				margin-bottom: 0.5em;
-
-				@include media($large-screen) {
-					font-size: 1.8em;
+				font-size: 2.8em;
+				@include media (max-width $horizontal-bar-mode) {
+					font-size: 2.2em;
 				}
 			}
 
 			p {
 				font-weight: 200;
+				font-size: 1.6em;
 				line-height: 1.4em;
-				margin: 0 auto 3em auto;
-
-				@include media($large-screen) {
-					font-size: 1.1em;
-					max-width: 40%;
-				}
+				@include media (max-width $horizontal-bar-mode) {
+					font-size: 1.2em;
+				}			
 			}
 		}
 
 		button {
-			@include button(flat, $base-accent-color);
+			@include button(flat, transparent);
 			padding: 0.7em 1em;
+			margin: 0 0.4em;
+			min-width: 160px;
+			font-weight: 200;
+			font-size: 1em;
+			line-height: 1.4em;
+
+			.pre-order {
+				color: blue;
+				background-color: white;
+				box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.5);
+			}
+			@include media (max-width $horizontal-bar-mode) {
+				font-size: 1.2em;
+				min-width: 60%;
+				margin-bottom: 0.8em;
+			}
+
 		}
 	}
+
 }
