--- a/css/main.css
+++ b/css/main.css
@@ -694,12 +694,12 @@ input[type="submit"] {
   padding: 0px; }
 
 .hero {
-  background-image: url("/img/moti/Moti-day.jpg");
-  background-image: url("/img/moti/Moti-day.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/img/moti/Moti-day.jpg");
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -717,19 +717,21 @@ input[type="submit"] {
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center;
-  padding-bottom: 3em;
   height: 100%; }
   .hero .hero-logo img {
-    height: 8em;
+    height: 10em;
     margin-bottom: 1em; }
   .hero .hero-inner {
     max-width: 68em;
     margin-left: auto;
     margin-right: auto;
     color: white;
-    margin: auto;
-    padding: 3.5em;
-    text-align: center; }
+    text-align: center;
+    z-index: 10;
+    background: rgba(52, 27, 43, 0.5);
+    border-radius: 20px;
+    padding: 90px 40px 90px 40px;
+    margin: 10px; }
     .hero .hero-inner::after {
       clear: both;
       content: "";
@@ -738,24 +740,25 @@ input[type="submit"] {
       clear: both;
       content: "";
       display: table; }
+    @media screen and (max-width: 40em) {
+      .hero .hero-inner {
+        padding: 40px inherit; } }
     .hero .hero-inner .hero-copy {
       text-align: center; }
       .hero .hero-inner .hero-copy h1 {
-        font-size: 1.6em;
-        margin-bottom: 0.5em; }
-        @media screen and (min-width: 53.75em) {
+        font-size: 2.8em; }
+        @media screen and (max-width: 40em) {
           .hero .hero-inner .hero-copy h1 {
-            font-size: 1.8em; } }
+            font-size: 2.2em; } }
       .hero .hero-inner .hero-copy p {
         font-weight: 200;
-        line-height: 1.4em;
-        margin: 0 auto 3em auto; }
-        @media screen and (min-width: 53.75em) {
+        font-size: 1.6em;
+        line-height: 1.4em; }
+        @media screen and (max-width: 40em) {
           .hero .hero-inner .hero-copy p {
-            font-size: 1.1em;
-            max-width: 40%; } }
+            font-size: 1.2em; } }
     .hero .hero-inner button {
-      background-color: #477DCA;
+      background-color: transparent;
       border-radius: 3px;
       border: none;
       color: white;
@@ -765,16 +768,115 @@ input[type="submit"] {
       padding: 7px 18px;
       text-decoration: none;
       background-clip: padding-box;
-      padding: 0.7em 1em; }
+      background-color: transparent;
+      border-radius: 3px;
+      border: none;
+      color: white;
+      display: inline-block;
+      font-size: inherit;
+      font-weight: bold;
+      padding: 7px 18px;
+      text-decoration: none;
+      background-clip: padding-box;
+      padding: 0.7em 1em;
+      margin: 0 0.4em;
+      min-width: 160px;
+      font-weight: 200;
+      font-size: 1em;
+      line-height: 1.4em; }
       .hero .hero-inner button:hover:not(:disabled) {
-        background-color: #578ad4;
+        background-color: rgba(13, 13, 13, 0);
         cursor: pointer; }
       .hero .hero-inner button:active:not(:disabled), .hero .hero-inner button:focus:not(:disabled) {
-        background-color: #3c71bb;
+        background-color: transparent;
+        cursor: pointer; }
+      .hero .hero-inner button:hover:not(:disabled) {
+        background-color: rgba(13, 12, 12, 0);
+        cursor: pointer; }
+      .hero .hero-inner button:active:not(:disabled), .hero .hero-inner button:focus:not(:disabled) {
+        background-color: transparent;
         cursor: pointer; }
       .hero .hero-inner button:disabled {
         opacity: 0.5;
         cursor: not-allowed; }
+      .hero .hero-inner button .pre-order {
+        color: blue;
+        background-color: white;
+        box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.5); }
+      @media screen and (max-width: 40em) {
+        .hero .hero-inner button {
+          font-size: 1.2em;
+          min-width: 60%;
+          margin-bottom: 0.8em; } }
+
+.what-is-moti {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 50px; }
+  .what-is-moti::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .what-is-moti .bullets {
+    padding: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-lines: multiple;
+    -moz-box-lines: multiple;
+    box-lines: multiple;
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-bottom: 1.5;
+    margin: 1em;
+    overflow: auto; }
+    .what-is-moti .bullets h2 {
+      margin: 0; }
+    .what-is-moti .bullets li {
+      list-style: none; }
+    .what-is-moti .bullets p {
+      color: #333;
+      line-height: 1.5; }
+    .what-is-moti .bullets img {
+      max-width: 100%; }
+    .what-is-moti .bullets .bullet {
+      -webkit-flex-basis: 20em;
+      -moz-flex-basis: 20em;
+      flex-basis: 20em;
+      -ms-flex-preferred-size: 20em;
+      -webkit-flex-grow: 1;
+      -moz-flex-grow: 1;
+      flex-grow: 1;
+      -ms-flex-positive: 1; }
+    .what-is-moti .bullets .bullet-icon {
+      background: #477DCA;
+      border-radius: 50%;
+      float: left;
+      height: 3.5em;
+      padding: 0.875em;
+      width: 3.5em; }
+    .what-is-moti .bullets .bullet-icon-1 {
+      background: #477DCA; }
+    .what-is-moti .bullets .bullet-icon-2 {
+      background: #47caaa; }
+    .what-is-moti .bullets .bullet-icon-3 {
+      background: #a9ca47; }
+    .what-is-moti .bullets .bullet-content {
+      margin-left: 4.9em;
+      margin-bottom: 2em; }
+    .what-is-moti .bullets h2 {
+      border-bottom: 1px solid rgba(51, 51, 51, 0.2);
+      display: inline-block;
+      font-size: 1.4em;
+      margin-bottom: 0.58333em;
+      padding-top: 0.5em; }
 
 #map_canvas {
   height: 400px;
@@ -826,6 +928,12 @@ input[type="submit"] {
       left: 0px;
       height: 100%;
       width: 100%; }
+
+.beta-signup {
+  padding: 80px 0;
+  background-color: #ff2d7c;
+  color: white;
+  text-align: center; }
 
 .footer {
   display: -webkit-box;
